manifests/gateway-grpcdemo.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: grpcdemo
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: grpcdemo-cert
  addresses:
  - type: NamedAddress
    value: grpcdemo-vip
